# app_recommandation_contenu

./: .gitignore  README.md  pyproject.toml
azure_function/: function_app.py  requirements.txt
my_content/: __init__.py  recommendation_engine.py
streamlit_app/: app.py
