[project]
name = "app-recommandation-contenu"
version = "0.1.0"
description = ""
authors = [
    {name = "david",email = "david.marivat-larose@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.52.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "azure-functions (>=1.24.0,<2.0.0)",
    "azure-storage-blob (>=12.27.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
